# SolDefender

./: Mainstay.toml  README.md  package-lock.json  package.json
migrations/: deploy.ts
programs/0-signer-authorization/insecure/: Cargo.toml
programs/0-signer-authorization/recommended/: Cargo.toml
programs/0-signer-authorization/secure/: Cargo.toml
programs/1-account-data-matching/insecure/: Cargo.toml
programs/1-account-data-matching/recommended/: Cargo.toml
programs/1-account-data-matching/secure/: Cargo.toml
programs/10-sysvar-address-checking/insecure/: Cargo.toml
programs/10-sysvar-address-checking/recommended/: Cargo.toml
programs/10-sysvar-address-checking/secure/: Cargo.toml
programs/2-owner-checks/insecure/: Cargo.toml
programs/2-owner-checks/recommended/: Cargo.toml
programs/2-owner-checks/secure/: Cargo.toml
programs/3-type-cosplay/insecure/: Cargo.toml
programs/3-type-cosplay/recommended/: Cargo.toml
programs/3-type-cosplay/secure/: Cargo.toml
programs/4-initialization/insecure/: Cargo.toml
programs/4-initialization/insecure/src/: lib.rs
programs/4-initialization/recommended/: Cargo.toml
programs/4-initialization/secure/: Cargo.toml
programs/5-arbitrary-cpi/insecure/: Cargo.toml
programs/5-arbitrary-cpi/insecure/src/: lib.rs
programs/5-arbitrary-cpi/recommended/: Cargo.toml
programs/5-arbitrary-cpi/secure/: Cargo.toml
programs/6-duplicate-mutable-accounts/insecure/: Cargo.toml
programs/6-duplicate-mutable-accounts/recommended/: Cargo.toml
programs/8-pda-sharing/insecure/: Cargo.toml
tests/: raw.ts
(+44 files in other folders)
