[package]
name = "initialization-insecure"
version = "0.1.0"
description = "Created with Mainstay"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "initialization_insecure"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
mainstay-lang = "0.20.1"
