[package]
name = "arbitrary-cpi-insecure"
version = "0.1.0"
description = "Created with Mainstay"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "arbitrary_cpi_insecure"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
mainstay-lang = "0.20.1"
mainstay-spl = "0.20.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }